Improve audio handling, volume persistence & logging
Stability, UX and noise reduction: switch many noisy info logs to debug; add TempFileByteSpool.cleanupOrphanedSpoolFiles() and call it at startup to remove leftover .spool files; ensure worker threads are joined (with interrupt handling) when stopping Dolby/Stereo audio handlers to avoid races.\n\nVolume persistence refactor: SOURCE_VOLUMES now uses scoped String keys (world|dimension|x,y,z) instead of BlockPos, with migration from legacy x,y,z keys, eviction when the map grows past a limit, and helper methods to generate/sanitize scope and dimension keys. Debounced saves run on a named daemon thread and skip redundant immediate saves. Persisted keys are written/read as strings.\n\nPlayback tracking and UX: extend turntable stop grace, add duplicate-suppression window and markStreamStarted to avoid duplicate client streams; clear tracker on logout/world changes; prevent playback if master sound volume is zero. ModernTurntableSound ensures minimum audible volume and marks stream started when fetching stream. ModernTurntableScreen volume slider now uses a quadratic mapping (perceptual gain) for better control.\n\nOther: invalidate cached OpenAL handles on device loss, minor diagnostics/log-level adjustments and small behavior tweaks to reduce log spam and improve robustness.